--- a/backend/templates/blog/post_detail.html
+++ b/backend/templates/blog/post_detail.html
@@ -1,9 +1,44 @@
-{% extends 'base.html' %}
-{% load static%}
-{%block content %}
-Post detail
-{{ post.title }}
-{{ post.content }}
-{{post.excerpt|truncatewords:30}}
+{% extends "base.html" %}
+{% load i18n %}
 
+{% block title %}{{ post.title }}{% endblock %}
+
+{% block content %}
+<div class="card mb-4">
+    {% if post.image %}
+    <div class="text-center mt-3">
+        <img src="{{ post.image.url }}" class="img-fluid rounded post-detail-image" alt="{{ post.title }}">
+    </div>
+    {% endif %}
+    <div class="card-body">
+        <h1 class="card-title">{{ post.title }}</h1>
+        <h6 class="card-subtitle mb-2 text-muted">
+            {% trans "By:" %} {{ post.author.username }} | {% trans "Published:" %} {{ post.published_at|date:"d M, Y"
+            }}
+            {% if post.category %}
+            | {% trans "Category:" %} {{ post.category.name }}
+            {% endif %}
+        </h6>
+        <hr>
+        <div class="post-content">
+            {{ post.content|safe|linebreaks }}
+        </div>
+        <hr>
+        <p><small>{% trans "Status:" %} {{ post.get_status_display }}</small></p>
+
+        {% if user.is_authenticated and user == post.author %}
+        <div class="mt-3">
+            <a href="{% url 'django_blog:post_update' slug=post.slug %}" class="btn btn-sm btn-outline-info me-2">{%
+                trans "Edit Post" %}</a>
+            <a href="{% url 'django_blog:post_delete' slug=post.slug %}" class="btn btn-sm btn-outline-danger">{% trans
+                "Delete Post" %}</a>
+
+        </div>
+        {% endif %}
+    </div>
+
+</div>
+
+
+<a href="{% url 'django_blog:home' %}" class="btn btn-secondary mt-3">&laquo; {% trans "Back to Blog" %}</a>
 {% endblock content %}
