--- a/backend/templates/blog/index.html
+++ b/backend/templates/blog/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
-<h1>Blog Posts</h1>
+<h1>{% trans "Blog Posts" %}</h1>
 {% if posts %}
 <ul>
 
@@ -20,13 +21,14 @@
             <div class="col-md-{% if post.image %}8{% else %}12{% endif %}">
                 <h2><a href="{% url 'django_blog:post_detail' slug=post.slug %}">{{ post.title }}</a></h2>
                 <p>{{ post.excerpt|truncatewords:30 }}</p>
-                <p><small>Publicado el: {{ post.published_at|date:"F d, Y" }} por {{ post.author }}</small></p>
+                <p><small>{% trans "Publicado el:" %} {{ post.published_at|date:"F d, Y" }} {% trans "por" %} {{
+                        post.author }}</small></p>
             </div>
         </div>
     </li>
     {% endfor %}
 </ul>
 {% else %}
-<p>No posts are available.</p>
+<p>{% trans "No posts are available." %}</p>
 {% endif %}
 {% endblock %}
